infrastructure/configs/traefik-dashboard-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-auth
  namespace: ingress-traefik
spec:
  basicAuth:
    secret: traefik-dashboard-auth
