infrastructure/configs/kube-apiserver-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-apiserver-lb
  namespace: kube-system
spec:
  type: LoadBalancer
  loadBalancerIP: 10.42.110.100
  externalTrafficPolicy: Local
  ports:
    - port: 443
      targetPort: 6443
      protocol: TCP
      name: https
  selector:
    component: kube-apiserver
