infrastructure/configs/traefik-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: ingress-traefik
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: ingress-traefik-dashboard-auth@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: traefik.test.snctm.it
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-traefik
                port:
                  name: websecure
  tls:
    - hosts:
        - traefik.test.snctm.it
      secretName: traefik-dashboard-tls
